# Brain-games

./: Makefile  README.md  config.cfg  pyproject.toml
brain_games/: engine.py  even_logic.py
brain_games/games/: brain_calc.py  brain_calc_logic.py  brain_even.py  brain_gcd.py  brain_gcd_logic.py  brain_prime.py  brain_prime_logic.py  brain_progression.py  brain_progression_logic.py  cli.py  even_logic.py
brain_games/logic_for_all_games/: all_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games_script.py  brain_gcd.py  brain_prime.py  brain_progression.py
